--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,8 @@ pygame==1.9.6
 ipdb==0.13.3
 hdfwriter==0.1.3
 GitPython==3.1.7
-celerycryptography==3.0
+celery==3.1.26.post2
+cryptography==3.0
 google-api-python-client==1.10.0
 google-auth-httplib2==0.0.4
 google-auth==1.20.1
