removing pygame as a requirement because on ubuntu it needs to be installed from apt

--- a/tests/unit_tests/Makefile
+++ b/tests/unit_tests/Makefile
@@ -9,3 +9,13 @@ all:
 	python test_mp_proxy.py
 	python test_riglib_sink.py
 	python test_riglib_source.py
+
+cli:
+	python test_riglib_experiment.py
+	python test_mixin_features.py
+	python test_feature_savehdf.py
+	python test_riglib_bmi.py
+	python test_riglib_traits.py
+	python test_mp_proxy.py
+	python test_riglib_sink.py
+	python test_riglib_source.py
